// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display manager state with the good color > should display loading Badge 1`] = `
<div>
  <div
    class="_skeleton_kauw8_2"
    data-testid="badge"
  />
</div>
`;

exports[`should display manager state with the good color > should display manager 'active' badge for 'success' 1`] = `
<div>
  <span
    class="_badge_vpjtq_2 _badge--success_vpjtq_43 _badge--md_vpjtq_56"
    data-testid="badge"
  >
    service_state_active
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'deleted' badge for 'critical' 1`] = `
<div>
  <span
    class="_badge_vpjtq_2 _badge--critical_vpjtq_19 _badge--md_vpjtq_56"
    data-testid="badge"
  >
    service_state_deleted
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'deleted' badge for 'critical' 2`] = `
<div>
  <span
    class="_badge_vpjtq_2 _badge--critical_vpjtq_19 _badge--md_vpjtq_56"
    data-testid="badge"
  >
    service_state_deleted
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'suspended' badge for 'warning' 1`] = `
<div>
  <span
    class="_badge_vpjtq_2 _badge--warning_vpjtq_47 _badge--md_vpjtq_56"
    data-testid="badge"
  >
    service_state_suspended
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'toActivate' badge for 'information' 1`] = `
<div>
  <span
    class="_badge_vpjtq_2 _badge--information_vpjtq_23 _badge--md_vpjtq_56"
    data-testid="badge"
  >
    service_state_toActivate
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'toDelete' badge for 'information' 1`] = `
<div>
  <span
    class="_badge_vpjtq_2 _badge--information_vpjtq_23 _badge--md_vpjtq_56"
    data-testid="badge"
  >
    service_state_toDelete
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'toSuspend' badge for 'information' 1`] = `
<div>
  <span
    class="_badge_vpjtq_2 _badge--information_vpjtq_23 _badge--md_vpjtq_56"
    data-testid="badge"
  >
    service_state_toSuspend
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'unknown' badge for 'information' 1`] = `
<div>
  <span
    class="_badge_vpjtq_2 _badge--information_vpjtq_23 _badge--md_vpjtq_56"
    data-testid="badge"
  >
    unknown
  </span>
</div>
`;
